[ruby/pathname] Make Pathname#each_entry return enumerator if called without block

Fixes [Bug #18158]

https://github.com/ruby/pathname/commit/914c726aa2